--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 script:
-    - cp -R wine-staging-mirror wine-code
+    - git clone wine-staging-mirror wine-code
     - wine-staging-mirror/patches/patchinstall.sh DESTDIR=wine-code --all --force-autoconf --backend=git-am
 
