--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 script:
-    - git clone wine-staging-mirror wine-code
-    - ls
+    - git clone wine-mirror wine-code
     - wine-staging-mirror/patches/patchinstall.sh DESTDIR="$(pwd)/wine-code" --all --force-autoconf --backend=git-am
 
